BRA-34: Add page to test which techniques for wrapping text around images work on native mobile browsers

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -7,35 +7,25 @@
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <p>Row</p>
-        <div class="container row">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
+        <h1>Wrapping text with a simple float.</h1>
+        <div class="container">
+            <div class="image"></div>
+            <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
         </div>
-        <p>Column</p>
-        <div class="container column">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-        <p>Grow active</p>
-        <div class="container stretch">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-        <p>Justify content and align items to end</p>
-        <div class="container align_end">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-        <p>Various sizes and self alignments</p>
-        <div class="container various_sizes">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
+        <h1>Wrapping text with float and shape-outside.</h1>
+        <div class="container">
+            <div class="image shape"></div>
+            <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
         </div>
     </body>
 </html>
