Fixed BRA-10: Added search header and search javascript API

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -7,6 +7,8 @@
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+    <div id="warning"></div>
+    <div id="container">
         <h1>Wrapping text with a simple float.</h1>
         <div class="container">
             <div class="image"></div>
@@ -27,5 +29,8 @@
             no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </p>
         </div>
+    </div>
+    <script src="findAndReplaceDOMText.js"></script>
+    <script src="searchAPI.js"></script>
     </body>
 </html>
