--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Hello</title>
+        <link href="vendors/normalize.css" rel="stylesheet" type="text/css" />
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
