BRA-22: Build the rulebook's Introduction chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Hello</title>
-        <link href="vendors/normalize.css" rel="stylesheet" type="text/css" />
-        <link href="main.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-    <div id="warning"></div>
-    <div id="container">
-        <h1>Wrapping text with a simple float.</h1>
-        <div class="container">
-            <div class="image"></div>
-            <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-            no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Rulebook</title>
+    <link href="vendors/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+  <div id="warning"></div>
+  <div id="container" class="container">
+    <main class="rulebook">
+      <section id="introduction" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/introduction/introduction-heading.png" alt="Introduction">
+        </figure>
+        <div class="article">
+          <p>1-4 Players, Age 14+, 90 minutes</p>
+          <p>
+            Enter the mysterious World of Fenian, a place where barbarian clans rule wild lands and corrupted civilizations live in decaying cities - a place filled with powers gifted by ancient gods and treacherous demons.
+          </p>
+          <p>
+            Become a Warlord and lead your clan on the conquest of civilized nations. Take their lands and steal their riches.
+          </p>
+          <p>
+            You will need a strong economy and an even stronger army. You will have to manage resources and construct buildings, but you will be able to summon the power of ancient gods and demons to gain temporary magical benefits.
+          </p>
+          <p>
+            Only the strongest clan will prevail on the path to glory, leaving its mark in history.
+          </p>
         </div>
-        <h1>Wrapping text with float and shape-outside.</h1>
-        <div class="container">
-            <div class="image shape"></div>
-            <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-            no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
+        <div class="article">
+          <h2>Goal of the Game</h2>
+          <p>
+            Use your Champions to gather resources, construct Buildings, pray to Gods and lead your troops in battle to conquer civilized regions. In the end, the player with the most Domination points wins.
+          </p>
         </div>
-    </div>
-    <script src="findAndReplaceDOMText.js"></script>
-    <script src="searchAPI.js"></script>
-    </body>
+      </section>
+    </main>
+  </div>
+  <script src="findAndReplaceDOMText.js"></script>
+  <script src="searchAPI.js"></script>
+  </body>
 </html>
