BRA-23: Build the rulebook's Game Flow chapter, 1st Phase section

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -15,7 +15,7 @@
         <figure class="h1">
           <img src="images/rulebook/introduction/introduction-heading.png" alt="Introduction">
         </figure>
-        <div class="article">
+        <div class="inner_content">
           <p>1-4 Players, Age 14+, 90 minutes</p>
           <p>
             Enter the mysterious World of Fenian, a place where barbarian clans rule wild lands and corrupted civilizations live in decaying cities - a place filled with powers gifted by ancient gods and treacherous demons.
@@ -30,11 +30,46 @@
             Only the strongest clan will prevail on the path to glory, leaving its mark in history.
           </p>
         </div>
-        <div class="article">
+        <div class="inner_content">
           <h2>Goal of the Game</h2>
           <p>
             Use your Champions to gather resources, construct Buildings, pray to Gods and lead your troops in battle to conquer civilized regions. In the end, the player with the most Domination points wins.
           </p>
+        </div>
+      </section>
+
+      <section id="game_flow" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/game_flow/gameflow-heading.png" alt="Game Flow">
+        </figure>
+        <div class="inner_content">
+          <p>
+            The game lasts a maximum of 6 Eras, with each Era running the same way.<br>
+            1st. Maintenance Phase<br>
+            2nd. Action Phase<br>
+            3rd. End Phase<br>
+          </p>
+        </div>
+        <div class="inner_content">
+          <h2>1st Phase: Maintenance</h2>
+          <div class="note">
+            <p>Note: Skip this phase in the first Era of the game.</p>
+          </div>
+          <ul class="list">
+            <li>
+              Each player restores their activated God and Warchief cards to the vertical position.
+            </li>
+            <li>
+              Each player gains the resources indicated on their Buildings.<br>
+              You can activate each Building only once per Maintenance Phase, and the number of Buildings you can activate corresponds to your position on the Production knowledge track (see Barbarians Knowledge).
+            </li>
+          </ul>
+          <figure class="image_example">
+            <img src="images/rulebook/game_flow/maintenance.jpg" alt="Maintenance">
+            <figcaption class="image_example-caption">
+              Example: Red has two Buildings and only one Production Knowledge. Therefore, they choose one of their two Buildings and gain the resources indicated.
+            </figcaption>
+          </figure>
         </div>
       </section>
     </main>
