BRA-23: Build the rulebook's Game Flow chapter, 3rd Phase section

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -514,6 +514,63 @@
             </article>
           </article>
         </article>
+
+        <article id="end_era" class="inner_content">
+          <h2>3rd Phase: End of Era</h2>
+          <ul class="list">
+            <li>
+              Players recover their Champions from the Volcano.
+            </li>
+            <li>
+              <b>Following turn order</b>, players resolve the effect of the leftmost face-up card of the Timeline (Demon or Feast). The used card is then flipped face-down.
+            </li>
+            <li>
+              Players resolve the Final Event depicted on the board, below the Demon or Feast that has just been resolved: refill the display area and perform an automatic rotation of one ring (See Final Event)
+            </li>
+            <li>
+              A new Era begins.
+            </li>
+          </ul>
+          <article id="demon_card" class="inner_subcontent">
+            <h4>Demon Card</h4>
+            <p>
+              Demons are powerful entities that will ask you to pay a price to please them. First off, players must choose to pay 1 Gold or lose 5 Domination points. After that, following turn order, players can offer a higher tribute to gain a powerful advantage. Every Demon offers a different advantage (See Demons).
+            </p>
+            <figure class="image_example">
+              <img src="images/rulebook/game_flow/demon-card.jpg" alt="Demon Card">
+              <figcaption class="image_example-caption">
+                Example: Pay 5 resources of your choice to perform two Barbarians Knowledge actions or two Tactics Knowledge actions.
+              </figcaption>
+            </figure>
+          </article>
+          <article id="feast_card" class="inner_subcontent">
+            <h4>Feast Card</h4>
+            <p>
+              Following turn order, every player can offer some of their resources to altars: Choose one of the two possible offerings and pay the amount of resources required, gaining Domination points. If you choose to offer nothing, you gain the 2 resources indicated in the last row.
+            </p>
+            <figure class="image_example">
+              <img src="images/rulebook/game_flow/feast-card.jpg" alt="Feast Card">
+              <figcaption class="image_example-caption">
+                Example: You can pay 1 Gold and 1 Wood to score 3 Domination points, or you can pay 1 Gold and 3 Wood to score 7 Domination points. Alternatively, you can pay nothing and gain 2 Wood.
+              </figcaption>
+            </figure>
+          </article>
+          <article id="final_event" class="inner_subcontent">
+            <h4>Final Event</h4>
+            <ul class="list">
+              <li>
+                After resolving the Demon or Feast card, discard all the Building, God and Warchief cards from the display area to the bottom of their respective decks. Reveal 4 new Building cards, 2 new God cards and 2 new Warchief cards that will be available in the next Era.
+              </li>
+              <li>
+                Rotate the Volcano ring highlighted by 1 or 2 steps, as indicated on the board.
+                e.g.: the leftmost icon indicates to rotate the intermediate ring by 2 steps counter-clockwise.
+              </li>
+            </ul>
+            <figure>
+              <img src="images/rulebook/game_flow/volcanos-example.png" alt="Volcanos example">
+            </figure>
+          </article>
+        </article>
       </section>
     </main>
   </div>
