BRA-24: Build the rulebook's Game End chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -38,6 +38,7 @@
         </article>
       </section>
 
+
       <section id="game_flow" class="chapter">
         <figure class="h1">
           <img src="images/rulebook/game_flow/gameflow-heading.png" alt="Game Flow">
@@ -50,6 +51,7 @@
             3rd. End Phase<br>
           </p>
         </article>
+
         <article id="maintenance" class="inner_content">
           <h2>1st Phase: Maintenance</h2>
           <div class="note">
@@ -71,6 +73,7 @@
             </figcaption>
           </figure>
         </article>
+
         <article id="action" class="inner_content">
           <h2>2nd Phase: Action</h2>
           <ul class="list">
@@ -570,6 +573,88 @@
               <img src="images/rulebook/game_flow/volcanos-example.png" alt="Volcanos example">
             </figure>
           </article>
+        </article>
+      </section>
+
+      <section id="game_end" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/game_end/gameend-heading.png" alt="Game end">
+        </figure>
+        <article class="inner_content">
+          <p>
+            The game can end in three different ways:
+          </p>
+          <ul class="list">
+            <li>
+              At the end of the sixth Era.
+            </li>
+            <li>
+              If a player reaches 100 Domination Points; keep playing until the end of that Era.
+            </li>
+            <li>
+              All the Faction tokens on the Map have been conquered; keep playing until the end of that Era.
+            </li>
+          </ul>
+          <div class="text_image_inline">
+            <p>
+              Before the final scoring, following turn order, each player can decide to perform a War action.
+            </p>
+            <img class="icon" src="images/rulebook/game_flow/war.png" alt="War icon">
+          </div>
+          <div class="note">
+            <p>
+              Note: you don’t need to place a Champion to perform this action; follow all the standard rules for War.
+            </p>
+          </div>
+        </article>
+        <article id="final_scoring" class="inner_content">
+          <h4>Final Scoring</h4>
+          <p>
+            Players score points according to their Buildings and their Banners to add to their Domination points.
+          </p>
+          <p>
+            <u>Buildings scoring:</u><br>
+            Each Building shows one of five different criteria to score points:
+          </p>
+          <ul class="list">
+            <li>
+              Score 2 Domination points for each Faction token you collected.
+            </li>
+            <li>
+              Score 2 Domination points for each different type of Building you erected.
+            </li>
+          </ul>
+          <div class="note">
+            <p>
+              Note: The type of Building is determined by its artwork.
+            </p>
+          </div>
+          <ul class="list">
+            <li>
+              Score 2 Domination points for each Barbarian and Tactics Knowledge track where your disc reached the last space.
+            </li>
+            <li>
+              Score 2 Domination points for each God card in front of you.
+            </li>
+            <li>
+              Score 2 Domination points for each leftover resource you have, in the type indicated.
+            </li>
+          </ul>
+          <p>
+            <u>Banner scoring:</u><br>
+            Each player scores points for each of their group of regions conquered.<br>
+            A group is formed by linked regions conquered by the same player (i.e., with the same Banner).
+          </p>
+          <!-- TODO: add regions and dominations values -->
+          <figure class="image_example">
+            <img src="images/rulebook/game_end/game-end.jpg" alt="Game End example">
+            <figcaption class="image_example-caption">
+              Example: Yellow scores 4 Domination points for their group of regions on Fenian and Aaruwn (3 regions linked) and no points for the single region conquered on Cae.
+            </figcaption>
+          </figure>
+          <p>
+            The player who has the most Domination points at the end of Final Scoring is the winner of the game. In case of a tie, the player who’s first on the Honor Track wins.
+          </p>
         </article>
       </section>
     </main>
