BRA-25: Build the rulebook's Variant: Clan Power chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -657,6 +657,63 @@
           </p>
         </article>
       </section>
+
+
+      <section id="variant" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/variant/variant-heading.png" alt="Variant: Clan Power">
+        </figure>
+        <article class="inner_content">
+          <p>
+            You can choose to play the game using the special powers each clan has on their gameboard. Before setup, players randomly pick a clan. The unique powers of the clans are described below:
+          </p>
+          <div class="text_image_inline">
+            <img class="icon" src="images/rulebook/variant/red-tiger.png" alt="Red Tiger icon">
+            <p>
+              During a War, when you reveal a battle, you can choose to discard that battle instead of facing it and replace it with the next card.
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: You cannot discard the replaced battle in the same fashion.
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: You can use this power multiple times during the same War.
+            </p>
+          </div>
+          <div class="text_image_inline">
+            <img class="icon" src="images/rulebook/variant/blue-bear.png" alt="Blue Bear icon">
+            <p>
+              Each time you sacrifice a Warchief, you can immediately resolve the effect depicted on the bottom-right of that card twice; then discard the Warchief card to the bottom
+              of the Warchief deck as usual.
+            </p>
+          </div>
+          <div class="text_image_inline">
+            <img class="icon" src="images/rulebook/variant/green-horse.png" alt="Green Horse icon">
+            <p>
+              In the 3rd phase of each Era, you can resolve the Feast or Demon card twice.
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: If you choose to resolve a Feast a second time, you can choose any of the three possible options of the Feast card.
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: If you choose to resolve a Demon a second time, you do not have to pay 1 Gold / lose 5 domination points a second time.
+            </p>
+          </div>
+          <div class="text_image_inline">
+            <img class="icon" src="images/rulebook/variant/yellow-wolf.png" alt="Yellow Wolf icon">
+            <p>
+              In the 3rd phase of each Era, you can resolve the Feast or Demon card twice.
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
