BRA-26: Build the rulebook's Expansion rules, Hunt Expansion chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -10,7 +10,7 @@
   <body>
   <div id="warning"></div>
   <div id="container" class="container">
-    <main class="rulebook">
+    <div class="rulebook">
       <section id="introduction" class="chapter">
         <figure class="h1">
           <img src="images/rulebook/introduction/introduction-heading.png" alt="Introduction">
@@ -732,12 +732,211 @@
           <div class="text_image_inline">
             <img class="icon" src="images/rulebook/variant/yellow-wolf.png" alt="Yellow Wolf icon">
             <p>
-              In the 3rd phase of each Era, you can resolve the Feast or Demon card twice.
+              At the beginning of each Era, before the Maintenance phase, you can gain 2 resources of your choice.
             </p>
           </div>
         </article>
       </section>
-    </main>
+    </div>
+
+    <div class="rulebook_expansion">
+      <section id="hunt_expansion" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/expansion/expansion-heading.png" alt="Expansion rules">
+        </figure>
+        <article class="inner_content">
+          <p>
+            This additional content improves variability and adds replay value. These rules explain the Hunt Expansion and several new modules you can mix and match with the base game or with the Hunt Expansion.
+          </p>
+        </article>
+      </section>
+
+      <section id="hunt_expansion" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/expansion/hunt-heading.png" alt="Hunt Expansion">
+        </figure>
+        <article id="hunt_introduction" class="inner_content">
+          <h2>Introduction</h2>
+          <p>
+            This expansion introduces several new mechanics and a new set of rings to increase the options and strategies of the base game.<br>
+            Hunt Expansion can be played with any map.<br>
+            <i>We highly recommend playing this expansion after some games with the base game, as you get more familiar with the terms and mechanics of Barbarians: The Invasion.</i>
+          </p>
+        </article>
+        <article id="hunt_setup" class="inner_content">
+          <h2>Set Up</h2>
+          <p>
+            The setup is the same as the base game, except for the following changes:
+          </p>
+          <p>
+            <b>1a.</b> Use the cardboard cutout pieces of the expansion in place of the rings provided in the base game.
+            Randomly choose 4 Magma Tokens and place them face-up on four different sectors, one in each ring.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/expansion-setup-1.jpg" alt="Expansion setup 1a">
+          </figure>
+          <p>
+            <b>2a.</b> Place the 4 Hunt marker tokens on each region of Arvya.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/expansion-setup-2.jpg" alt="Expansion setup 2a">
+          </figure>
+          <p>
+            <b>3a.</b> Sort the Beast and Monster cards by color, shuffle these four decks separately, and place them face-up next to the Region decks. This forms the common display of Beasts and Monsters, divided into four decks, one for each Region type.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/expansion-setup-3.png" alt="Expansion setup 3a">
+          </figure>
+          <p>
+            <b>6a.</b> Take the Skullcrushers for each player clan, and place them on the starting region of the Map (the region with a giant volcano).
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/expansion-setup-4.jpg" alt="Expansion setup 4a">
+          </figure>
+        </article>
+        <article id="hunt_new_actions" class="inner_content">
+          <h2>New Actions</h2>
+          <p>
+            The new rings of the Volcano feature different action spaces.
+          </p>
+          <p>
+            War action works like a standard War action, except that you get a bonus on some regions. The bonus is indicated by the small card icon:
+          </p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/war-glacier.png" alt="War Glacier icon">
+              <p>
+                If you attack a Glacier region, you face one less battle.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/war-forest.png" alt="War Forest icon">
+              <p>
+                If you attack a Forest region, you face one less battle.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/war-mountain.png" alt="War Mountain icon">
+              <p>
+                If you attack a Mountain region, you face one less battle.
+              </p>
+            </li>
+          </ul>
+          <div class="text_around_image_left">
+            <img class="icon" src="images/rulebook/expansion/skullcrusher.png" alt="Skullcrusher icon">
+            <p>
+              You can move your Skullcrusher up to as many steps as the number indicated on the action space. For each step, you can move the Skullcrusher to an adjacent region in any direction. At the end of the movement, if you land on a region where a Hunt marker is present, you can immediately choose to start a Hunt action!
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: You can decide to move fewer steps than the number indicated by the action.
+            </p>
+          </div>
+          <div class="note">
+            <p>
+              Note: You can move to any adjacent region. You don’t need to have any Discovery Knowledge to reach new islands with your Skullcrusher.
+            </p>
+          </div>
+          <article id="hunt" class="inner_subcontent">
+            <h4>Hunt</h4>
+            <p>
+              If, immediately after a Skullcrusher action, your Skullcrusher is on a region containing a Hunt Marker, you can try to hunt down a Beast or Monster. First you can recruit troops as in a War action. When you are done, look at the face-up card in the Beasts and Monsters display corresponding to the region your Skullcrusher is on. The card tells you how many battles you have to face. (e.g.: If your Skullcrusher is on a Forest region containing the Hunt Marker, and the Snake of the Forest is visible on the display, you can hunt it. In order to hunt down the Snake of the Forest, you need to  ght two battles - drawing cards from the Forest region deck).<br>
+              Flip simultaneously all the region cards you have to face. You can decide to pay the total cost of gray troops indicated on the cards to capture the creature, or pay nothing and return all the revealed cards to their deck.
+            </p>
+            <div class="note">
+              <p>
+                Note: These are not standard battles. No rewards or Overkill are possible during this action. Moreover, you can’t use any bonuses (such as Defense Track Knowledge, Warchief cards, or Beast power).
+              </p>
+            </div>
+            <p>
+              At the end of a Hunt, two outcomes are possible:
+            </p>
+            <p>
+              <b>You can’t or don’t want to pay the total cost of troops:</b> the creature escapes, and the hunt fails.
+            </p>
+            <p>
+              <b>You pay the total cost of troops:</b> you have either tamed the beast or collected the trophy of the monster.<br>
+              - Take the Beast (or Monster) card you defeated and put it in front of you.<br>
+              <i>OR</i><br>
+              - Immediately score the Domination points indicated on the top-right of the card, multiplied by the number indicated next to the island where you hunted it.
+            </p>
+            <figure class="image_example">
+              <img src="images/rulebook/expansion/hunt.jpg" alt="Hunt example">
+              <figcaption class="image_example-caption">
+                Example: You hunted down the Snake of the Forest in the forest of Arvya island, thus you score 5 Domination points (multiplied by 1).
+              </figcaption>
+            </figure>
+            <p>
+              In both cases, move the Hunt Marker to the successive Island on a region of the same type as the one it was placed. If it was on Dörth island, remove the piece from the Map. It will not be used anymore during this game.
+            </p>
+          </article>
+          <article id="beast_and_monsters" class="inner_subcontent">
+            <h4>Beast and Monsters</h4>
+            <p>
+              They are gained in the same exact way, but have different uses.
+            </p>
+            <p>
+              <b>Tamed Beasts:</b> You can use your Beast cards during any War action to immediately win a battle, without paying any troops; you can use each tamed beast only one time for each War, and only if you are facing battles on the same regions indicated on your Beast card:
+            </p>
+            <ul class="icons_list">
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-glacier.png" alt="Beast Glacier icon">
+                <p>Glacier</p>
+              </li>
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-forest.png" alt="Beast Forest icon">
+                <p>Forest</p>
+              </li>
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-mountain.png" alt="Beast Mountain icon">
+                <p>Mountain</p>
+              </li>
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-glacier-swamp.png" alt="Beast Glacier or Swamp icon">
+                <p>Glacier or Swamp</p>
+              </li>
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-forest-swamp.png" alt="Beast Forest or Swamp icon">
+                <p>Forest or Swamp</p>
+              </li>
+              <li class="icons_list-item">
+                <img class="icon" src="images/rulebook/expansion/beast-mountain-swamp.png" alt="Beast Mountain or Swamp icon">
+                <p>Mountain or Swamp</p>
+              </li>
+            </ul>
+            <p>
+              If you use a Beast to win a battle, you collect eventual rewards at the end of the War, as usual, including any Domination points for Overkill.
+            </p>
+            <figure class="image_example">
+              <img src="images/rulebook/expansion/beasts-example.jpg" alt="Beasts example">
+              <figcaption class="image_example-caption">
+                Example: You are facing a War on a Swamp region, and you have the Mammoth beast in front of you. You can use it to win a battle and gain any eventual reward and Overkill Domination points without paying any troops. The Mammoth beast could also be used in a War on a Glacier region.
+              </figcaption>
+            </figure>
+            <p>
+              <b>Monster Trophies:</b> During your turn, before or after placing your Champion, you can discard a Monster trophy to resolve the effect depicted on the card. <i>Return discarded Monster cards to the gamebox.</i>
+            </p>
+            <figure class="image_example">
+              <img src="images/rulebook/expansion/monsters-example.jpg" alt="Monsters example">
+              <figcaption class="image_example-caption">
+                Example: During any one of your turns, you can discard the Yeti of the Glacier region to immediately perform a War action. If you win, triple the Domination points depicted on the Faction token.
+              </figcaption>
+            </figure>
+          </article>
+          <article id="magma_tokens" class="inner_subcontent">
+            <h4>Magma Tokens</h4>
+            <p>
+              Whenever you land on an action space of a sector where a magma token is present, you immediately deal damage to other clans.<br>
+              The damage depends on the type of the magma token (resource or troop). All the enemy clans must immediately lose one of that type of resource or troop, if they can; otherwise they lose 1 Domination point.
+            </p>
+            <p>
+              At the end of the 3rd Phase of each Era, move each Magma token to the next sector in a clockwise direction.
+            </p>
+          </article>
+        </article>
+      </section>
+    </div>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
   <script src="searchAPI.js"></script>
