BRA-24: Add the banner scoring table

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -645,7 +645,30 @@
             Each player scores points for each of their group of regions conquered.<br>
             A group is formed by linked regions conquered by the same player (i.e., with the same Banner).
           </p>
-          <!-- TODO: add regions and dominations values -->
+          <div class="banner_scoring">
+            <ul class="banner_scoring-regions">
+              <li>Regions in a group:</li>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+              <li>6</li>
+              <li>7</li>
+              <li>8</li>
+            </ul>
+            <ul class="banner_scoring-domination">
+              <li>Domination points:</li>
+              <li>0</li>
+              <li>1</li>
+              <li>4</li>
+              <li>9</li>
+              <li>16</li>
+              <li>25</li>
+              <li>36</li>
+              <li>49</li>
+            </ul>
+          </div>
           <figure class="image_example">
             <img src="images/rulebook/game_end/game-end.jpg" alt="Game End example">
             <figcaption class="image_example-caption">
